# DigitalSignature_libgcrypt

./: CMakeLists.txt  main.cpp
